[Offline Pages] Fix PrerenderingLoader regression for handle a stop event from the prerender stack.

BUG=654555

Review-Url: https://codereview.chromium.org/2405863003
Cr-Commit-Position: refs/heads/master@{#424439}

Former-commit-id: 492403bb5d8d52e7bc7b3e4bd5f73b4b959349c3